syntax = "proto3";

option csharp_namespace = "OneScript.Debug.Grpc";

import "google/protobuf/empty.proto";
package OscriptDebug;

service OscriptDebug {
	// Мониторы событий и объектов отладки
	rpc InputOutputEvents(stream OsInputOutput) returns (stream OsInputOutput);
	rpc ThreadEvents(google.protobuf.Empty) returns (stream OsThreadStatus);
	rpc StoppedEvents(google.protobuf.Empty) returns (stream OsStoppedEvent);

	// Сервисные методы
	rpc StartDebug(google.protobuf.Empty) returns (google.protobuf.Empty);
	rpc StopDebug(OsStopDebugRequest) returns (google.protobuf.Empty);
	rpc ProcessExited(google.protobuf.Empty) returns (stream OsProcessExitedMessage);

	// Действия степпера отладки
	rpc Continue(OsContinueRequest) returns (google.protobuf.Empty);
	rpc Pause(OsPauseRequest) returns (google.protobuf.Empty);
	rpc Next(OsNextRequest) returns (google.protobuf.Empty);
	rpc StepIn(OsStepInRequest) returns (google.protobuf.Empty);
	rpc StepOut(OsStepOutRequest) returns (google.protobuf.Empty);

	// События конфигурации отладки
	rpc SetBreakpoints(OsSetBreakpointsRequest) returns (OsSetBreakpointsResponse);
	rpc SetExceptionBreakpoints(OsSetExceptionBreakpointRequest) returns (google.protobuf.Empty);
	rpc GetStackFrames(OsGetStackFramesRequest) returns (OsGetStackFramesResponse);
	rpc GetScopes(OsGetScopesRequest) returns (OsGetScopesResponse);
	rpc GetVariables(OsGetVariablesRequest) returns (OsGetVariablesResponse);
	rpc Evaluate(OsEvaluateRequest) returns (OsEvaluateResponse);
	rpc GetThreads(google.protobuf.Empty) returns (OsGetThreadsResponse);
	rpc GetProcessId(google.protobuf.Empty) returns (OsGetProcessIdResponse);
}

enum OsStoppedEventReason {
	STEP = 0;
	BREAKPOINT = 1;
	EXCEPTION = 2;
	ENTRY = 3;
	GOTO = 4;
	FUNCTION_BREAKPOINT = 5;
	DATA_BREAKPOINT = 6;
	INSTRUCTION_BREAKPOINT = 7;
}

message OsStoppedEvent {
	OsStoppedEventReason reason = 1;
	int32 thread_id = 2;
	optional string text = 3;
	bool is_log_message = 4;
}

message OsProcessExitedMessage {
	int32 exit_code = 1;
}

message OsInputOutput {
	string message = 1;
	OsInputOutputCategory category = 2; 
}

enum OsInputOutputCategory {
	STD_OUT = 0;
	STD_ERR = 1;
}

message OsThreadStatus {
	int32 thread_id = 1;
	bool thread_stopped = 2;
}

message OsInitRequest {
	// Флаг того, что осуществляется локальная отладка
	bool local_debugging = 1;
}

message OsStopDebugRequest {
	bool terminate = 1;
}

message OsContinueRequest {
	int32 thread_id = 1;
	bool single_thread = 2;
}

message OsPauseRequest {
	int32 thread_id = 1;
	bool single_thread = 2;
}

message OsNextRequest {
	int32 thread_id = 1;
	bool single_thread = 2;
}

message OsStepInRequest {
	int32 thread_id = 1;
	bool single_thread = 2;
}

message OsStepOutRequest {
	int32 thread_id = 1;
	bool single_thread = 2;
}

message OsSourceBreakpoint {
	string source = 1;
	int32 line = 2;
	optional string condition = 3;
	optional string log_message = 4;
}

message OsSetBreakpointsRequest {
	repeated OsSourceBreakpoint breakpoints = 1;
}

message OsBreakpoint {
	int32 id = 1;
	string source = 2;
	int32 line = 3;
	bool verified = 4;
}

message OsSetBreakpointsResponse {
	repeated OsBreakpoint breakpoints = 1;
}

message OsExceptionBreakpoint {
	string id = 1;
	optional string condition = 2;
}

message OsSetExceptionBreakpointRequest {
	repeated OsExceptionBreakpoint breakpoints = 1;
}

message OsGetStackFramesRequest {
	int32 thread_id = 1;
	int32 start_index = 2;
}

message OsVariable {
	string name = 1;
	string type = 2;
	string value = 3;
	int32 index = 4;
	bool is_structured = 5;
}

message OsStackFrame {
	int32 index = 1;
	string method_name = 2;
	int32 line_number = 3;
	string source = 4;
	int32 thread_id = 6;
}

message OsGetStackFramesResponse {
	repeated OsStackFrame stack_frames = 1;
}

message OsGetScopesRequest {
	int32 thread_id = 1;
	int32 frame_index = 2;
}

message OsScope {
	bool is_local = 1;
	repeated OsVariable variables = 2;
}

message OsGetScopesResponse {
	repeated OsScope scopes = 1;
}

message OsGetVariablesRequest {
	int32 thread_id = 1;
	int32 frame_index = 2;
	bool isLocal = 3;
	repeated int32 path = 4;
	string expression = 5;
}

message OsGetVariablesResponse {
	repeated OsVariable variables = 1;
}

message OsEvaluateRequest {
	int32 thread_id = 1;
	int32 context_frame = 2;
	string expression = 3;
}

message OsEvaluateResponse {
	OsVariable variable = 1;
}

message OsGetThreadsResponse {
	repeated int32 threads = 1;
}

message OsGetProcessIdResponse {
	int32 process_id = 1;
}